--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -13,4 +13,6 @@ createspring.jpa.show-sql=true
 #slq statements in console
 spring.jpa.show-sql=true
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
+spring.datasource.sql-script-encoding=utf-8
+server.tomcat.uri-encoding=UTF-8
 
