--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,4 +1,4 @@
-#plik zawieraj¹cy globalne w³aœciwoœci konfiguracyjne
+#plik zawierajï¿½cy globalne wï¿½aï¿½ciwoï¿½ci konfiguracyjne
 spring.datasource.url=jdbc:mysql://localhost:3306/spring_blog\
   ?useSSL=false\
   &serverTimezone=UTC\
@@ -15,4 +15,7 @@ spring.jpa.show-sql=true
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 spring.datasource.sql-script-encoding=utf-8
 server.tomcat.uri-encoding=UTF-8
+#logowanie basic do formularza logowania
+spring.security.user.name=user
+spring.security.user.roles=USER
 
